corpus/c/syntax/case-12/snapshots/gcc13_14/native_text_capture/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [syntax] syntax error @ src/main.c:2:10
help: fix the first parser error at the user-owned location
want: )
near: { token
| src/main.c:2:10
|     if (1 {
|          ^
raw:
  src/main.c:2:10: error: expected ‘)’ before ‘{’ token
  src/main.c: In function ‘broken_if’:

error: [syntax] syntax error @ src/main.c:6:1
help: fix the first parser error at the user-owned location
want: expression
near: } token
| src/main.c:6:1
| }
| ^
raw:
  src/main.c:6:1: error: expected expression before ‘}’ token
      6 | }

error: [linker] linker reported a failure
help: check the missing/duplicate symbol and the object or library inputs
raw : src/main.c:10:16: error: invalid operands to binary + (have ‘int *’ and ‘char *’)
raw:
  src/main.c:10:16: error: invalid operands to binary + (have ‘int *’ and ‘char *’)
  src/main.c: In function ‘broken_type’:
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output